bin/testsuite/tests/compiler/src/errors/compiler5567.swg
#global testerror "Err0094"

func toto()
{
    //var #uniq0 = 0
    var a = 0
    var b = a.b
}
